<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="flag_submit">Submit</string>
    <string name="app_name">UGotFlagged</string>
    <string name="login_email">Email:</string>
    <string name="login_password">Password:</string>
    <string name="login_submit">Login</string>
    <string name="add_comment">Add Comment</string>
    <string name="tnc">By signing in you agree to the Agilis Mobility
		Privacy Policies.
	</string>
    <string name="add_flag_instructions">Add A Flag!</string>
    <string name="login_instructions">Log in with your UGotFlagged Account</string>
    <string name="register_submit">Sign Up!</string>
    <string name="register_instructions">Sign up for a UGotFlagged Account</string>
    <string name="like_unlike">Like</string>
    <string name="issuer_spinner_prompt">State</string>
    <string name="vehicle_spinner_prompt">Vehicle</string>
    <string name="post_type_spinner_prompt">Post Type</string>

    <!-- By Signing up you agree to the UGotFlagged Terms and Conditions -->

</resources>